--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     font-family: Times New Roman;
-    background: url("img/bg-img.jpg");
+    background: url("img/");
     background-size: cover;
 }
 
