--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     font-family: Times New Roman;
-    background: url("img/");
+    background: url("img/image2.PNG");
     background-size: cover;
 }
 
