--- a/style.css
+++ b/style.css
@@ -1,81 +1,154 @@
-body {
-    margin: 0;
-    font-family: Times New Roman;
-    background: url("img/image2.PNG");
-    background-size: cover;
+*{
+    margin:0;
+    padding:0;
+    box-sizing:border-box;
 }
 
-.container {
-    width: 95%;
-    margin: auto;
-    border: 2px solid #00bfff;
+body{
+    font-family:"Times New Roman";
+    background:url("img/image2.PNG") no-repeat center center fixed;
+    background-size:cover;
+    height:100vh;
+    overflow:hidden;
 }
 
-/* Navigation */
-.nav {
-    background-color: #001f3f;
-    padding: 10px;
-    text-align: center;
+/* OUTER CONTAINER */
+.container{
+    width:97%;
+    height:97vh;
+    margin:auto;
+    border:3px solid #00bfff;
+    display:flex;
+    flex-direction:column;
 }
 
-.nav a {
-    color: white;
-    margin: 0 25px;
-    text-decoration: none;
-    font-weight: bold;
+/* NAVIGATION */
+.nav{
+    background:#001f3f;
+    padding:6px 0;
+    text-align:center;
 }
 
-/* Header */
-.header img {
-    width: 100%;
-    height: 80px;
+.nav a{
+    color:white;
+    text-decoration:none;
+    margin:0 40px;
+    font-size:14px;
+    font-weight:bold;
 }
 
-/* Main layout */
-.main {
-    display: flex;
+/* HEADER */
+.header{
+    height:80px;
 }
 
-/* Left Section */
-.left {
-    width: 25%;
-    padding: 10px;
-    border-right: 2px solid #00bfff;
+.header img{
+    width:100%;
+    height:100%;
 }
 
-.clothes {
-    width: 100%;
+/* CONTENT AREA */
+.content{
+    flex:1;
+    display:flex;
 }
 
-.coat {
-    margin-top: 20px;
-    text-align: center;
+/* LEFT PANEL */
+.left-panel{
+    width:27%;
+    border-right:3px solid #00bfff;
+    padding:10px;
 }
 
-.coat img {
-    width: 80%;
+.left-box{
+    border:2px solid #00bfff;
+    padding:5px;
 }
 
-/* Right Section */
-.right {
-    width: 75%;
-    padding: 15px;
-    background-color: #f2f2f2;
+.left-box img{
+    width:100%;
+    height:250px;
+    object-fit:cover;
 }
 
-/* Social Section */
-.social {
-    display: flex;
-    border-top: 2px solid #00bfff;
+.left-item{
+    margin-top:20px;
+    border:2px solid #00bfff;
+    padding:5px;
+    text-align:center;
+    color:white;
 }
 
-.box {
-    width: 25%;
-    padding: 10px;
-    border-right: 2px solid #00bfff;
-    background-color: #f2f2f2;
+.left-item img{
+    width:80%;
+    height:150px;
+    object-fit:contain;
 }
 
-.box img {
-    width: 40px;
+/* RIGHT PANEL */
+.right-panel{
+    width:73%;
+    border-left:3px solid #00bfff;
+    background:#dcdcdc;
+    display:flex;
+    flex-direction:column;
+}
+
+.top-section{
+    padding:15px;
+    border-bottom:3px solid #00bfff;
+    font-size:14px;
+}
+
+.top-section ul{
+    margin-left:25px;
+}
+
+.bottom-section{
+    padding:15px;
+    font-size:14px;
+}
+
+.bottom-section input{
+    margin:3px 0;
+    height:20px;
+}
+
+/* SOCIAL TITLE */
+.social-title{
+    background:#001f3f;
+    color:white;
+    text-align:center;
+    padding:6px;
+    font-weight:bold;
+}
+
+/* SOCIAL SECTION */
+.social{
+    display:flex;
+    height:110px;
+    background:#dcdcdc;
+    border-top:3px solid #00bfff;
+}
+
+.social-box{
+    width:25%;
+    border-right:3px solid #00bfff;
+    padding:10px;
+    font-size:14px;
+}
+
+.social-box:last-child{
+    border-right:none;
+}
+
+.social-box img{
+    width:35px;
+    display:block;
+    margin:5px 0;
+}
+
+.social-box a{
+    color:blue;
+    text-decoration:underline;
 }
