--- a/style.css
+++ b/style.css
@@ -1,154 +1,122 @@
-*{
-    margin:0;
-    padding:0;
-    box-sizing:border-box;
+body {
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    background: url("../img/interface2.PNG");
+    background-size: cover;
 }
 
-body{
-    font-family:"Times New Roman";
-    background:url("img/image2.PNG") no-repeat center center fixed;
-    background-size:cover;
-    height:100vh;
-    overflow:hidden;
+.main {
+    width: 95%;
+    margin: auto;
+    border: 3px solid #0a4a6e;
 }
 
-/* OUTER CONTAINER */
-.container{
-    width:97%;
-    height:97vh;
-    margin:auto;
-    border:3px solid #00bfff;
-    display:flex;
-    flex-direction:column;
+/* Menu */
+.menu {
+    background: #001f3f;
+    color: white;
 }
 
-/* NAVIGATION */
-.nav{
-    background:#001f3f;
-    padding:6px 0;
-    text-align:center;
+.menu ul {
+    margin: 0;
+    padding: 10px;
+    list-style: none;
+    display: flex;
+    justify-content: space-around;
 }
 
-.nav a{
-    color:white;
-    text-decoration:none;
-    margin:0 40px;
-    font-size:14px;
-    font-weight:bold;
+.menu li {
+    cursor: pointer;
 }
 
-/* HEADER */
-.header{
-    height:80px;
+/* Header */
+.header {
+    background: green;
+    text-align: center;
+    padding: 10px;
 }
 
-.header img{
-    width:100%;
-    height:100%;
+.header h1 {
+    margin: 0;
+    color: #00ff99;
+    letter-spacing: 5px;
 }
 
-/* CONTENT AREA */
-.content{
-    flex:1;
-    display:flex;
+/* Content Layout */
+.content {
+    display: flex;
+    border-top: 3px solid #0a4a6e;
 }
 
-/* LEFT PANEL */
-.left-panel{
-    width:27%;
-    border-right:3px solid #00bfff;
-    padding:10px;
+.left {
+    width: 25%;
+    padding: 10px;
+    border-right: 3px solid #0a4a6e;
 }
 
-.left-box{
-    border:2px solid #00bfff;
-    padding:5px;
+.big-img {
+    width: 100%;
+    margin-bottom: 20px;
 }
 
-.left-box img{
-    width:100%;
-    height:250px;
-    object-fit:cover;
+.coat {
+    margin-bottom: 20px;
+    color: white;
 }
 
-.left-item{
-    margin-top:20px;
-    border:2px solid #00bfff;
-    padding:5px;
-    text-align:center;
-    color:white;
+.coat img {
+    width: 100%;
 }
 
-.left-item img{
-    width:80%;
-    height:150px;
-    object-fit:contain;
+/* Right */
+.right {
+    width: 75%;
+    background: #dcdcdc;
+    padding: 15px;
 }
 
-/* RIGHT PANEL */
-.right-panel{
-    width:73%;
-    border-left:3px solid #00bfff;
-    background:#dcdcdc;
-    display:flex;
-    flex-direction:column;
+.right h2 {
+    margin-top: 0;
 }
 
-.top-section{
-    padding:15px;
-    border-bottom:3px solid #00bfff;
-    font-size:14px;
+.form {
+    margin-top: 10px;
 }
 
-.top-section ul{
-    margin-left:25px;
+.form label {
+    display: inline-block;
+    width: 100px;
 }
 
-.bottom-section{
-    padding:15px;
-    font-size:14px;
+.form input {
+    margin-bottom: 5px;
 }
 
-.bottom-section input{
-    margin:3px 0;
-    height:20px;
+button {
+    margin-top: 5px;
 }
 
-/* SOCIAL TITLE */
-.social-title{
-    background:#001f3f;
-    color:white;
-    text-align:center;
-    padding:6px;
-    font-weight:bold;
+/* Social */
+.social-title {
+    text-align: center;
+    background: #0a4a6e;
+    color: white;
+    padding: 5px;
+    font-weight: bold;
 }
 
-/* SOCIAL SECTION */
-.social{
-    display:flex;
-    height:110px;
-    background:#dcdcdc;
-    border-top:3px solid #00bfff;
+.social {
+    display: flex;
 }
 
-.social-box{
-    width:25%;
-    border-right:3px solid #00bfff;
-    padding:10px;
-    font-size:14px;
+.box {
+    width: 25%;
+    background: #dcdcdc;
+    border: 2px solid #0a4a6e;
+    text-align: left;
+    padding: 10px;
 }
 
-.social-box:last-child{
-    border-right:none;
-}
-
-.social-box img{
-    width:35px;
-    display:block;
-    margin:5px 0;
-}
-
-.social-box a{
-    color:blue;
-    text-decoration:underline;
+.box img {
+    width: 40px;
 }
