--- a/style.css
+++ b/style.css
@@ -1,122 +1,101 @@
 body {
     margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
-    background: url("../img/interface2.PNG");
+    font-family: Arial;
+    background-image: url("img/image2.PNG");
     background-size: cover;
 }
 
-.main {
+.main-container {
     width: 95%;
     margin: auto;
-    border: 3px solid #0a4a6e;
+    border: 2px solid #000;
 }
 
-/* Menu */
-.menu {
+.nav {
     background: #001f3f;
-    color: white;
-}
-
-.menu ul {
-    margin: 0;
-    padding: 10px;
-    list-style: none;
-    display: flex;
-    justify-content: space-around;
-}
-
-.menu li {
-    cursor: pointer;
-}
-
-/* Header */
-.header {
-    background: green;
     text-align: center;
     padding: 10px;
 }
 
-.header h1 {
-    margin: 0;
-    color: #00ff99;
-    letter-spacing: 5px;
+.nav a {
+    color: white;
+    margin: 0 40px;
+    text-decoration: none;
+    font-weight: bold;
 }
 
-/* Content Layout */
+.banner img {
+    width: 100%;
+    height: 100px;
+}
+
 .content {
     display: flex;
-    border-top: 3px solid #0a4a6e;
+    border-top: 2px solid #000;
 }
 
 .left {
     width: 25%;
+    border-right: 2px solid #000;
     padding: 10px;
-    border-right: 3px solid #0a4a6e;
 }
 
-.big-img {
+.left img {
     width: 100%;
-    margin-bottom: 20px;
 }
 
-.coat {
-    margin-bottom: 20px;
+.coat-section {
+    margin-top: 20px;
+}
+
+.coat-section h3 {
     color: white;
 }
 
-.coat img {
-    width: 100%;
-}
-
-/* Right */
 .right {
     width: 75%;
-    background: #dcdcdc;
-    padding: 15px;
+    padding: 10px;
+    background: #ddd;
 }
 
-.right h2 {
-    margin-top: 0;
+.text-section {
+    border-bottom: 2px solid #000;
+    padding-bottom: 10px;
 }
 
-.form {
-    margin-top: 10px;
+.form-section {
+    padding-top: 10px;
 }
 
-.form label {
-    display: inline-block;
-    width: 100px;
+.form-section input {
+    margin: 3px 0;
 }
 
-.form input {
-    margin-bottom: 5px;
-}
-
-button {
-    margin-top: 5px;
-}
-
-/* Social */
 .social-title {
     text-align: center;
-    background: #0a4a6e;
     color: white;
-    padding: 5px;
     font-weight: bold;
+    padding: 10px;
+    border-top: 2px solid #000;
 }
 
 .social {
     display: flex;
+    border-top: 2px solid #000;
 }
 
-.box {
+.social-box {
     width: 25%;
-    background: #dcdcdc;
-    border: 2px solid #0a4a6e;
-    text-align: left;
+    border-right: 2px solid #000;
     padding: 10px;
+    background: #ddd;
 }
 
-.box img {
+.social-box img {
     width: 40px;
+    vertical-align: middle;
+}
+
+.social-box a {
+    margin-left: 10px;
 }
