--- a/style.css
+++ b/style.css
@@ -1,125 +1,165 @@
-body {
-    margin: 0;
-    font-family: Arial;
-    background-image: url("img/image2.PNG");
-    background-size: cover;
+/* Remove default spacing */
+*{
+    margin:0;
+    padding:0;
+    box-sizing:border-box;
+}
+
+body{
+    font-family:Arial;
+    background-image:url("img/image2.PNG");
+    background-size:cover;
+    background-repeat:no-repeat;
 }
 
 /* Main Container */
-.container {
-    width: 95%;
-    margin: auto;
-    border: 2px solid black;
+.container{
+    width:98%;
+    margin:5px auto;
+    border:2px solid black;
 }
 
-/* Navbar */
-.navbar {
-    background: black;
-    text-align: center;
-    padding: 10px 0;
+/* ================= NAVBAR ================= */
+.navbar{
+    background:black;
+    text-align:center;
+    padding:8px 0;
 }
 
-.navbar a {
-    color: white;
-    text-decoration: none;
-    margin: 0 40px;
-    font-weight: bold;
+.navbar a{
+    color:white;
+    text-decoration:none;
+    margin:0 50px;
+    font-weight:bold;
 }
 
-/* Banner */
-.banner img {
-    width: 100%;
-    height: 100px;
+/* ================= BANNER ================= */
+.banner img{
+    width:100%;
+    height:90px;
+    display:block;
+    border-top:2px solid black;
+    border-bottom:2px solid black;
 }
 
-/* Main Layout */
-.main {
-    display: flex;
+/* ================= MAIN LAYOUT ================= */
+.main{
+    display:flex;
+    border-bottom:2px solid black;
 }
 
-/* Left Sidebar */
-.left-sidebar {
-    width: 25%;
-    padding: 10px;
+/* LEFT SIDEBAR */
+.left-sidebar{
+    width:25%;
+    padding:10px;
+    border-right:2px solid black;
 }
 
-.left-box {
-    border: 1px solid #ccc;
-    text-align: center;
-    padding: 10px;
+.left-box{
+    border:2px solid #cfcfcf;
+    padding:8px;
+    text-align:center;
 }
 
-.left-box img {
-    width: 100%;
+.left-box img{
+    width:100%;
 }
 
-/* Middle Sidebar */
-.middle-sidebar {
-    width: 20%;
-    padding: 10px;
+/* ================= MIDDLE + RIGHT WRAPPER ================= */
+/* This creates ONE shared border around middle + right */
+.middle-right-wrapper{
+    width:75%;
+    display:flex;
+    border-left:2px solid black;
 }
 
-.product-box {
-    border: 1px solid black;
-    text-align: center;
-    padding: 10px;
-    margin-bottom: 20px;
-    background: #0a4a7a;
-    color: white;
+/* MIDDLE SIDEBAR */
+.middle-sidebar{
+    width:30%;
+    padding:10px;
+    border-right:2px solid black;
 }
 
-.product-box img {
-    width: 100%;
-    margin-top: 10px;
+/* PRODUCT BOXES */
+.product-box{
+    border:2px solid black;
+    margin-bottom:15px;
+    text-align:center;
 }
 
-/* Right Content */
-.right-content {
-    width: 55%;
-    background: #ddd;
-    border: 1px solid black;
-    padding: 15px;
+.product-box h3{
+    background:#154c79;
+    color:white;
+    padding:6px;
 }
 
-.description {
-    border-bottom: 1px solid black;
-    padding-bottom: 10px;
+.product-box img{
+    width:100%;
+    padding:10px;
 }
 
-.form-section {
-    margin-top: 10px;
+/* ================= RIGHT CONTENT ================= */
+.right-content{
+    width:70%;
+    background:#ddd;
+    padding:15px;
 }
 
-.form-section input {
-    margin: 4px 0;
+/* Description section */
+.description{
+    border-bottom:2px solid black;
+    padding-bottom:10px;
 }
 
-/* Footer Title */
-.footer-title {
-    text-align: center;
-    font-weight: bold;
-    color: white;
-    padding: 10px;
+.description h2{
+    margin-bottom:8px;
 }
 
-/* Footer */
-.footer {
-    display: flex;
-    border-top: 1px solid black;
+.description ul{
+    margin-left:20px;
+    margin-top:5px;
 }
 
-.social-box {
-    width: 25%;
-    background: #eee;
-    border-right: 1px solid black;
-    padding: 10px;
+/* Form section */
+.form-section{
+    margin-top:10px;
 }
 
-.social-box img {
-    width: 40px;
-    vertical-align: middle;
+.form-section input{
+    margin:4px 0;
 }
 
-.social-box a {
-    margin-left: 10px;
+/* ================= FOOTER ================= */
+
+.footer-title{
+    text-align:center;
+    color:white;
+    font-weight:bold;
+    padding:8px;
+    border-top:2px solid black;
+}
+
+.footer{
+    display:flex;
+    border-top:2px solid black;
+}
+
+.social-box{
+    width:25%;
+    background:#eee;
+    border-right:2px solid black;
+    padding:10px;
+}
+
+.social-box:last-child{
+    border-right:none;
+}
+
+.social-box img{
+    width:40px;
+    vertical-align:middle;
+}
+
+.social-box a{
+    margin-left:10px;
 }
