--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ body{
 
 /* MIDDLE SIDEBAR */
 .middle-sidebar{
-    width:20%;
+    width:15%;
     border-right:2px solid black;
     padding:0;
     background:transparent;
@@ -124,8 +124,7 @@ body{
     height:140px;
     display:block;
     margin:5px 0;
-    border:3px solid #003366;
-    padding:2px;
+    padding:2px 0;
     background:white;
     object-fit:cover;
 }
@@ -137,7 +136,7 @@ body{
     padding:0;
     display:flex;
     flex-direction:column;
-    flex:1;
+    flex:3;
 }
 
 /* DESCRIPTION */
